Fork into a seperate jvm when running.